kubernetes/apps/flux-system/flux-operator/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - "flux.${ROOT_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Content-Security-Policy
                value: >-
                  default-src 'self' data:;
                  object-src 'none';
                  script-src 'self' 'unsafe-inline';
                  style-src 'self' 'unsafe-inline';
