kubernetes/apps/flux-system/flux-operator/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: flux-operator
    egress:
      - toFQDNs:
          # flux artifacts
          - matchName: ghcr.io
          - matchName: pkg-containers.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
  - endpointSelector: {}
    egress:
      - toEndpoints:
          - {}
